@@ -1,6 +1,6 @@
 ﻿// ****************************************************************************
 // 
-// Copyright (C) 2005-2011  Doom9 & al
+// Copyright (C) 2005-2012 Doom9 & al
 // 
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -577,6 +577,9 @@ namespace MeGUI.packages.video.x264
             if (_log == null)
                 return _xs.KeyframeInterval;
 
+            if (_xs.x264GOPCalculation == 1)
+                _xs.KeyframeInterval = (int)Math.Round((double)_xs.KeyframeInterval / 25.0 * ((double)fps_n / fps_d), 0);
+
             int fps = (int)Math.Round((decimal)fps_n / fps_d, 0);
             if (_device.MaxGOP > -1 && _xs.KeyframeInterval > fps * _device.MaxGOP)
             {
@@ -590,8 +593,10 @@ namespace MeGUI.packages.video.x264
         /// <summary>
         /// Calculates the --min-keyint value
         /// </summary>
+        /// <param name="fps_n">fps numerator</param>
+        /// <param name="fps_d">fps denominator</param>
         /// <returns>the --min-keyint value</returns>
-        public int getMinKeyint()
+        public int getMinKeyint(int fps_n, int fps_d)
         {
             string strCustomValue;
             extractCustomCommand("min-keyint", out strCustomValue);
@@ -602,8 +607,12 @@ namespace MeGUI.packages.video.x264
             if (_log == null)
                 return _xs.MinGOPSize;
 
-            if (_device.MaxGOP > -1 && _xs.KeyframeInterval / 10 != _xs.MinGOPSize)
-                _xs.MinGOPSize = _xs.KeyframeInterval / 10;
+            double fps = (double)fps_n / fps_d;
+            if (_xs.x264GOPCalculation == 1)
+                _xs.MinGOPSize = (int)((double)_xs.MinGOPSize / 25.0 * fps);
+
+            if (_device.MaxGOP > -1 && fps / 10 != _xs.MinGOPSize)
+                _xs.MinGOPSize = (int)(fps / 10);
 
             return _xs.MinGOPSize;
         }
